--- a/src/app/components/palindrome-info/palindrome-info.component.html
+++ b/src/app/components/palindrome-info/palindrome-info.component.html
@@ -1,7 +1,7 @@
-<div class="row">
-  <div class="col" *ngIf="palindrome.value">
+<div class="card">
+  <div class="card-body" >
   <h5 class="card-title">info</h5>
-  <ul class="list-group">
+  <ul class="list-group" *ngIf="palindrome.value">
     <span>value</span>
     <li class="list-group-item">{{palindrome.value}}</li>
     <span>min</span>
@@ -9,8 +9,9 @@
     <span>max</span>
     <li class="list-group-item">{{palindrome.max}}</li>
   </ul>
+    <ul class="list-group" *ngIf="!palindrome.value">
+      <li class="list-group-item">select an item from the lis</li>
+    </ul>
   </div>
-  <div class="col" *ngIf="!palindrome.value">
-    <h5 class="card-title">select an item from the list</h5>
-  </div>
+
 </div>
